force-app/main/default/objects/Vacation_Request__c/fields/Number_Days_on_Vacation__c.field-meta.xml
<CustomField>
    <fullName>Number_Days_on_Vacation__c</fullName>
    <formula>End_Date__c - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Days on Vacation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>