force-app/main/default/objects/Vacation_Request__c/fields/Vacation_Status__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Status__c</fullName>
    <formula>IF(TODAY() &lt; DATEVALUE(Start_Date__c), &quot;Upcoming&quot;, 
  IF(TODAY() &gt;= DATEVALUE(Start_Date__c) &amp;&amp; TODAY() &lt;= DATEVALUE(End_Date__c), &quot;Ongoing&quot;, 
    IF(TODAY() &gt; DATEVALUE(End_Date__c), &quot;Completed&quot;, &quot;N/A&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vacation Status</label>
    <type>Text</type>
</CustomField>